# vcdparser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: example.vcd
src/vcdparser/: parser.py
